--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -7,3 +7,15 @@ body{
   width: 100%;
   height: 100vh;
 }
+
+a {
+  text-decoration: none;
+}
+
+footer {
+  margin-top: 200px;
+}
+
+footer small{
+  font-size: 10px;
+}
